views and subviews controllers updated